--- a/joole-frontend/src/containers/product-page/table.css
+++ b/joole-frontend/src/containers/product-page/table.css
@@ -5,16 +5,31 @@ table {
   width: 100%;
 }
 
+.product-card__table{
+  background-color: white;
+  height: 400px;
+}
+
 td, th {
   border: 1px solid #dddddd;
   text-align: left;
   padding: 8px;
+  height: 50%;
 }
 
 tr:nth-child(even) {
   background-color: #dddddd;
+  height: 50%;
+}
+
+.table-img__container{
+    width: 100%;
+    height: 150px;
+    overflow: hidden;
 }
 
 .table-img{
-  width:100%;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
